--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1908,6 +1908,7 @@ body {
   }
 
   textarea {
+    background-color: rgba(0, 0, 0, 0);
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -1915,7 +1916,7 @@ body {
     max-width: 100%;
     min-height: 100px;
     max-height: 600px;
-    padding: 10px;
+    padding: 8px;
     font-family: khumbh-sans;
     line-height: 18px;
     height: 140px;
