Updated ownership review views

--- a/web/src/assets/css/_colors.scss
+++ b/web/src/assets/css/_colors.scss
@@ -12,6 +12,7 @@ $navy: #3B4353;
 $silverSand: #96b5b1;
 $bgColor: #F6F9FB;
 $navyLightText: #9fb0bd;
+$red: #c45e5e;
 
 :export {
     navy: $navy;
