Replaced usePopup hook with Popup component

--- a/web/src/assets/css/_colors.scss
+++ b/web/src/assets/css/_colors.scss
@@ -13,6 +13,7 @@ $silverSand: #96b5b1;
 $bgColor: #F6F9FB;
 $navyLightText: #9fb0bd;
 $red: #c45e5e;
+$zMax: 100000000000000000000;
 
 :export {
     navy: $navy;
