--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -3882,3 +3882,53 @@ a {
   font-size: 0.8rem;
   background: $navyVeryLight;
 }
+
+.image-upload-popup {
+  display: flex;
+  height: calc(100% - 40px);
+
+  .image-preview {
+    flex-grow: 1;
+    height: 100%;
+    box-sizing: border-box;
+    position: relative;
+
+    .image-holder {
+      background-color: #DEE5FF;
+      position: relative;
+      position: absolute;
+      left: 10px;
+      right: 10px;
+      top: 10px;
+      bottom: 10px;
+      border-radius: 5px;
+    }
+  }
+
+  .image-thumbnails {
+    width: 50%;
+    min-width: 50%;
+    overflow-y: scroll;
+
+    .title {
+      padding: 8px 5px;
+      color: $navy;
+      font-size: 0.8rem;
+    }
+
+    .thumbnails-area {
+      display: grid;
+      grid-gap: 10px;
+      padding-bottom: 10px;
+      padding-right: 10px;
+      grid-template-columns: auto auto auto;
+      .image-thumbnail {
+        width: 100%;
+        height: 100%;
+        border-radius: 3px;
+        background-color: lightgoldenrodyellow;
+        height: 80px;
+      }
+    }
+  }
+}
