--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -346,6 +346,7 @@ body {
     position: absolute;
     width: 140px;
     right: 0;
+    z-index: 3;
     transform: translateY(5px);
     border-radius: 5px;
     background-color: white;
