--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -2710,7 +2710,7 @@ body {
       div {
         width: 35px;
         height: 35px;
-        transform: translateX(10px) translateY(10px);
+        transform: translateY(10px);
       }
     }
     box-sizing: border-box;
@@ -4360,6 +4360,52 @@ a {
 
     &.active {
       background: #E0777D;
+    }
+  }
+}
+
+.mini-loading-slider {
+  width: 50px;
+  height: 100%;
+  background-color: $pink;
+  position: absolute;
+  animation-name: mini-loading-anim;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes mini-loading-anim {
+  from {
+    left: -60px;
+  }
+  to {
+    left: calc(100% + 10px);
+  }
+}
+
+.mobile-tab-slider {
+  font-family: sans-serif;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  ._slider {
+    display: flex;
+    justify-content: space-around;
+    
+    ._tab {
+      margin: 0 0px;
+      cursor: pointer;
+      color: $navy;
+      font-size: 1.2rem;
+      opacity: 0.5;
+      transition: color 0.25s, color 0.25s;
+
+      &.active {
+        color: $pink;
+        opacity: 1;
+      }
     }
   }
 }
