Updated frontend & backend links to use env ip rather than localhost

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -4500,6 +4500,7 @@ a {
       text-align: center;
       color: $navy;
       transition: color 0.35s;
+      cursor: pointer;
     }
 
     .logo-icon {
